[package]
name = "tiktoken"
version = "0.3.2"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "tiktoken"

[dependencies]
fancy-regex = "0.11.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"
anyhow = "1.0.70"
base64 = "0.21.0"
reqwest = "0.11.15"
tokio = { version = "1.26.0", features = ["full"] }

[profile.release]
incremental = true
